<resources>
    <string name="app_namelist">ListDisplay</string>
    <string name="action_settings1">Settings</string>
    <string name="money_on_mobile">MoneyOnMobile</string>
    <string name="app_name">Money On Mobile</string>
    <string name="welcome">Welcome</string>
    <string name="Rupee">\u20B9</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_aadhar_payment">AadharPaymentActivity</string>
    <string name="title_activity_aadhar_list">AadharListActivity</string>
    <string name="title_activity_best_fusion">BestFusionActivity</string>
    <string name="title_activity_home_bill_activity__pbx">HomeBillActivity_PBX</string>
    <string name="title_activity_change_password_pbx">ChangePasswordPBXActivity</string>
    <string name="title_activity_dthrecharge">DTH Recharge</string>
    <string name="login_failed_msg_default">Login Failed. Please check your mobile number and M-Pin</string>
    <string name="login_username_pwd_required">Please enter your mobile number and password</string>
    <string name="login_username_required">Please enter your mobile Number</string>
    <string name="login_pwd_required">Please enter your password</string>
    <string name="tpin">Enter T-Pin</string>
    <string name="mpin">Enter M-Pin/Password</string>
    <string name="tpin_incorrect">Incorrect T-Pin</string>
    <string name="mpin_incorrect">Incorrect M-Pin</string>
    <string name="title_activity_verify_tpin">VerifyTPinActivity</string>
    <string name="action_Pay">Pay</string>
    <string name="action_Verify">Verify</string>
    <string name="action_Transaction_Description">Transaction Description</string>
    <string name="action_DueDate">Due Date</string>
    <string name="action_BlueBill">Blue Bill</string>
    <string name="action_GreenBill">Green Bill</string>
    <string name="action_NewTransaction">new transaction</string>
    <string name="tvBeneficiaryName">Beneficiary Name</string>
    <string name="tvAccountNumber">Account Number</string>
    <string name="tvIFSCCode">IFSC Code</string>
    <string name="tvForgotPassword">Forgot Password</string>
    <string name="tvBeneficiaryMobileNumber">Beneficiary Mobile Number</string>
    <string name="tvSpinnerPayFrom">Pay From</string>
    <string name="tvSpinnerAliasName">Select Account Alias</string>
    <string name="tvAmount">Amount </string>
    <string name="tvAvailableLimit">Available Limit </string>
    <string name="tvProcessingFees">Processing Fees</string>
    <string name="tvAmountPayable">Amount Payable</string>
    <string name="tvOTP">OTP</string>
    <string name="tvIPIN">IPIN</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_mobileRecharge">Mobile Recharge</string>
    <string name="action_dthRecharge">DTH Recharge</string>
    <string name="action_billPayment">Bill Payment</string>
    <string name="action_cardSale">Card Sale</string>
    <string name="action_balanceTransfer">Balance Transfer</string>
    <string name="action_utilityBill">Utility Bill Payment</string>
    <string name="action_retailerPayment">Retailer Payment</string>
    <string name="action_imps">Mobile Money Order</string>
    <string name="action_Balance">Balance</string>
    <string name="action_history">History</string>
    <string name="action_giftVoucher">Gift Vouchers</string>
    <string name="action_walletUpdate">Wallet Update</string>
    <string name="action_busTicketing">Bus Tickets</string>
    <string name="action_railTicketing">Rail Tickets</string>
    <string name="action_airTicketing">Air Tickets</string>
    <string name="action_bookComplaint">Book Complaint</string>
    <string name="action_newWithUs">New With Us</string>
    <string name="action_contactUs">Contact Us</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_changeMpin">Change M-PIN</string>
    <string name="action_changeTpin">Change T-PIN</string>
    <string name="action_changePassword">Change Password</string>
    <string name="action_lIC">LIC</string>
    <string name="action_lic">lic</string>
    <string name="action_IMPSCreateCustomerRegistration">IMPS Create Customer Registration</string>
    <string name="action_IMPSCheckKYC">IMPS Check KYC</string>
    <string name="action_IMPSCustomerRegistration">IMPS Customer Registration</string>
    <string name="action_IMPSResetIPIN">IMPS Reset IPIN</string>
    <string name="action_IMPSBeneficiaryList">IMPS Beneficiary List</string>
    <string name="action_IMPSAddBeneficiary">IMPS Add Beneficiary </string>
    <string name="action_IMPSBeneficiaryDetails">IMPS Beneficiary Details </string>
    <string name="action_IMPSBankName">IMPS Bank Name </string>
    <string name="action_IMPSStateName">IMPS State Name </string>
    <string name="action_IMPSCityName">IMPS City Name </string>
    <string name="action_IMPSBranchName">IMPS Branch Name </string>
    <string name="action_IMPSMOMServiceCharge">IMPS Service Charge </string>
    <string name="action_IMPSVerifyProcess">IMPS Verify Process </string>
    <string name="action_IMPSVerifyPayment">IMPS Verify Payment </string>
    <string name="action_IMPSPaymentProcess">IMPS Payment Process </string>
    <string name="action_IMPSConfirmPayment">IMPS Confirm Payment </string>
    <string name="action_IMPSMOMSubmitPayment">IMPS Submit Payment </string>
    <string name="action_IMPSMOMConfirmPayment">IMPS Confirm Payment </string>
    <string name="action_IMPSMOMConfirmPaymentByRefund">IMPS Confirm Refund Payment </string>
    <string name="action_IMPSMOMSubmitPayPayment">IMPS Submit Pay Process </string>
    <string name="action_IMPSRefundList">IMPS Refund List</string>
    <string name="action_IMPSAuthentication">IMPS Authentication </string>
    <string name="action_IMPSAuthenticationMOM">IMPS MOM Authentication </string>
    <string name="action_MOMTPin">MOM T-Pin</string>
    <string name="action_SignUp">SignUp</string>
    <string name="signUp_btn">SignUp</string>
    <string name="title_activity_transaction_confirmation">Transaction Result</string>
    <string name="lic_success_msg_default">Payment Successful.</string>
    <string name="lic_failed_policyDetails_msg_default">Insufficient Limit</string>
    <string name="Imps_failed_Amount">Insufficient Wallet Balance</string>
    <string name="lic_failed_authorised_msg_default">Not Authorized</string>
    <string name="lic_failed_msg_default">Payment Failed.Please try again later</string>
    <string name="lic_failed_Receipt_msg_default">None of the policies entered is due for payment</string>
    <string name="error_invalid_t_pin">Invalid Tpin.Try again</string>
    <string name="error_field_required">This field is mandatory</string>
    <string name="error_pin_confirm_mismatch">Both PINs should be same</string>
    <string name="error_init_app">Error initializing the app. Please try again later or contact customer support if the problem persists</string>
    <string name="error_mobile_required">Mobile Number required</string>
    <string name="error_transfer_failed">Error occurred during transfer. Please try again or contact Customer Support for help.</string>
    <string name="error_transfer_failed_payU">Error occurred during transaction. Please try again.</string>
    <string name="error_recharge_failed">Error occurred during recharge. Please try again or contact Customer Support for help.</string>
    <string name="error_customer_phone_required">Please enter the customer\'s phone number.</string>
    <string name="error_phone_length">Phone Number should be of %1$d digits.</string>
    <string name="error_phone_length_min_max">Phone Number should be between %1$d and %2$d digits.</string>
    <string name="error_amount_min_max">Amount should be between Rs. %1$d and Rs. %2$d.</string>
    <string name="error_amount_min">Amount should not be less than Rs. %1$d.</string>
    <string name="error_subscriber_id_length">Subscriber ID should be of %1$d characters.</string>
    <string name="error_subscriber_id_min_max">Subscriber ID should be between %1$d and %2$d characters.</string>
    <string name="error_beneficiary_name_length">Beneficiary Name should be of %1$d characters.</string>
    <string name="error_beneficiary_name_min_max">Beneficiary Name should be between %1$d and %2$d characters.</string>
    <string name="error_AccountNumber_length">Account Number should be of %1$d digits.</string>
    <string name="error_AccountNumber_length_min_max">Account Number should be between %1$d and %2$d digits.</string>
    <string name="error_IFSCCODE_length">IFSC Code should be of %1$d digits.</string>
    <string name="error_IFSCCODE_length_min_max">IFSC Code should be between %1$d and %2$d digits.</string>
    <string name="error_obtaining_bill_amount">Could not obtain the bill amount. Please check the consumer number.</string>
    <string name="error_no_internet_title">No Internet!</string>
    <string name="error_no_internet">Your device is not connected to the Internet. Please try this when your Internet connection is back.</string>
    <string name="error_getting_balance">Error</string>
    <string name="error_imps_customer_registration">Could not fetch customer\'s registration status.</string>
    <string name="error_imps_customer_creation">Could not create customer.</string>
    <string name="error_imps_beneficiary_List">Could not fetch Beneficiary List.</string>
    <string name="error_tryAgain">Try Again.</string>
    <string name="error_imps_kyc">Could not fetch KYC.</string>
    <string name="error_otp">Enter Correct OTP.</string>
    <string name="error_imps_bank_List">Could not fetch Bank List.</string>
    <string name="error_imps_state_List">Could not fetch State List.</string>
    <string name="error_imps_city_List">Could not fetch City List.</string>
    <string name="error_imps_branch_List">Could not fetch Branch List.</string>
    <string name="error_imps_add_beneficiary">Could not Add New Beneficiary. Try Again Later.</string>
    <string name="error_imps_beneficiary_Details">Could not fetch Beneficiary List.</string>
    <string name="error_oldPasswordPbx"> Enter Correct Old Password </string>
    <string name="error_newPasswordPbx">The new Password cannot be empty</string>
    <string name="btn_recharge">Recharge</string>
    <string name="btn_back">Back</string>
    <string name="btn_transfer">Transfer</string>
    <string name="prompt_spinner_select_operator">Select Operator</string>
    <string name="lbl_Name">Name</string>
    <string name="lbl_DOB">Date of Birth</string>
    <string name="lblSubscriberId">Subscriber ID</string>
    <string name="lblRechargeAmount">Recharge Amount</string>
    <string name="lblAmount">Amount</string>
    <string name="tpin_submit_btn">Submit</string>
    <string name="btn_Login">Login</string>
    <string name="lblYourMobile">Your Mobile Number</string>
    <string name="lblCustomerMobile">Customer\'s Mobile Number</string>
    <string name="lblOccasion">Enter Occasion</string>
    <string name="lblDescription">Enter Description</string>
    <string name="lblSentTo">Sent To</string>
    <string name="lblSentFrom">Sent From</string>
    <string name="lblEmailId">Enter Email ID</string>
    <string name="lblBtnPrint">Print</string>
    <string name="lblBtnEmail">Email</string>
    <string name="lblBtnSMS">SMS</string>
    <string name="lbl_Email">Email</string>
    <string name="lblMPin_old">Old M-PIN</string>
    <string name="lblMPin_new">New M-PIN</string>
    <string name="lblMPin_new_confirm">Confirm New M-PIN</string>
    <string name="title_activity_transaction_history">Transaction History</string>
    <string name="no_transactions_found">No Transactions found</string>
    <string name="changepassword_old">Old Password</string>
    <string name="changepassword_new">New Password</string>
    <string name="changepassword_confirm">Confirm Password</string>
</resources>