<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/momHeader"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>

        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="80"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/msgDisplay"
                android:layout_above="@id/momHeader"
                style="@style/MoMTheme.wrapped.alertMsg"
                android:textSize="@dimen/text_medium"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/Operator"
                style="@style/SpinnerAppTheme"
                android:prompt="@string/prompt_spinner_select_operator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ultra_small"/>

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextAppTheme.phone"
                android:hint="@string/lblCustomerMobile"
                android:layout_marginBottom="@dimen/ultra_small"/>

            <EditText
                android:id="@+id/subscriberId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextAppTheme.phone"
                android:hint="@string/lblSubscriberId"
                android:layout_marginBottom="@dimen/ultra_small"/>

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextAppTheme.money"
                android:hint="@string/lblRechargeAmount"
                android:layout_marginBottom="@dimen/ultra_small"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:visibility="gone" />

            <LinearLayout
                style="@style/MoMTheme.btn_container">
                <Button
                    android:id="@+id/btn_recharge"
                    style="@style/MoMTheme.wrapped.customButton"
                    android:onClick="validateAndRecharge"
                    android:text="@string/btn_recharge"/>

                <Button
                    android:id="@+id/btnBack"
                    style="@style/MoMTheme.wrapped.customButton"
                    android:onClick="goBack"
                    android:text="@string/btn_back"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>
    </LinearLayout>
</RelativeLayout>