<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:layout_height="match_parent"

    android:layout_width="fill_parent">





<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="80"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/msgDisplay"
            style="@style/MoMTheme.wrapped.alertMsg"
            android:textSize="@dimen/text_small"
            android:visibility="gone" />
        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"

            android:textColor="#992f2f"
            android:textSize="8pt"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_mobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextAppTheme.phone"
            android:hint="@string/lblYourMobile"
            android:inputType="phone"
            android:layout_marginTop="@dimen/small"
            android:layout_marginBottom="@dimen/small"/>



        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_Name"


            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/small"
            android:layout_marginBottom="@dimen/small"/>

        <EditText
            android:id="@+id/et_emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/small"
            android:layout_marginBottom="@dimen/small"
            android:hint="@string/lbl_Email"
            android:imeOptions="actionNext"
            android:inputType="textWebEmailAddress"

        android:visibility="visible"/>

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_DOB"
            android:focusableInTouchMode="false"


            android:layout_marginTop="@dimen/small"
            android:layout_marginBottom="@dimen/small"/>






        <LinearLayout
            android:weightSum="3"
            style="@style/MoMTheme.btn_container">
            <Button
                android:id="@+id/BTN_signIn"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:onClick="postSignUpData"
                style="@style/MoMTheme.wrapped.customButton"
                android:text="@string/tpin_submit_btn"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="login"
                style="@style/MoMTheme.wrapped.customButton"
                android:text="@string/btn_Login"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>
</LinearLayout>
</RelativeLayout>


</ScrollView>