<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="80"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/msgDisplay"
            style="@style/MoMTheme.wrapped.alertMsg"
            android:textSize="@dimen/text_medium"
            android:visibility="gone" />
        <TextView
            android:id="@+id/msgDisplayResponse"
            style="@style/MoMTheme.wrapped.alertMsgResponse"
            android:textSize="@dimen/text_medium"
            android:visibility="gone" />


        <EditText
            android:id="@+id/oldPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/changepassword_old"
            style="@style/EditTextAppTheme.pinPBX"
            android:layout_marginBottom="@dimen/small"
            android:inputType="number"
            android:password="true"/>

        <EditText
            android:id="@+id/newPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextAppTheme.pinPBX"
            android:hint="@string/changepassword_new"
            android:layout_marginBottom="@dimen/small"
            android:inputType="number"
            android:password="true"/>

        <EditText
            android:id="@+id/newPinConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextAppTheme.pinPBX"
            android:hint="@string/changepassword_confirm"
            android:layout_marginBottom="@dimen/small"
            android:inputType="number"
            android:password="true"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_height="35dp"
            android:layout_width="match_parent"
            style="@style/MoMTheme.wrapped.customButton"
            android:layout_gravity="center_horizontal"
            android:text="@string/tpin_submit_btn"/>
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"/>
</LinearLayout>
</ScrollView>