<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/appsbg"
    tools:context="com.mom.app.activity.TransactionHistoryActivity">

    <fragment
        android:id="@+id/momHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        class="com.mom.app.fragment.HeaderFragment" />

    <TextView
        android:id="@+id/transactionHistoryHeader"
        android:layout_below="@id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_activity_transaction_history"
        android:layout_margin="@dimen/large"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/historyHeader" />

    <LinearLayout
        android:id="@+id/layoutListView"
        android:layout_below="@id/transactionHistoryHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/noTransactionsMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/listEmptyMessage"
            android:textColor="@color/red"
            android:text="@string/no_transactions_found"
            />

        <ListView
            android:id="@+id/listView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            />
    </LinearLayout>


    <Button
        android:id="@+id/btnBack"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutListView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:onClick="goBack"
        android:text="@string/btn_back"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</RelativeLayout>
